# EGO-Swarm-v2

./: start_sim.sh  sync.sh  tmux_run.sh  working_robots.txt  working_robots.txt.bak
Utils/manual_take_over/launch/: semi_sim_take_over_drone.launch
planner/plan_manage/launch/: circle_exchange_large.launch  moving_obstacles_avoidance.launch  semi_sim_run_onboard.launch  swarm.launch  swarm_large.launch  swarm_semi_sim.launch  swarm_semi_sim_gcs.launch
planner/plan_manage/launch/include/: default.rviz  semi_sim_advanced_param.xml  semi_sim_simulator.xml
planner/plan_manage/src/: ego_replan_fsm.cpp
planner/swarm_ros_bridge/: CMakeLists.txt  README.md  package.xml
planner/swarm_ros_bridge/config/: gcs_bridge.yaml  latency_test.yaml  onboard_plan.yaml  onboard_track.yaml  ros_topics.yaml  semi_sim_swarm_drone.yaml  semi_sim_swarm_drone2.yaml  semi_sim_swarm_gcs.yaml  swarm_drone.yaml  swarm_gcs.yaml  swarm_hitl_drone.yaml  swarm_hitl_gcs.yaml
planner/swarm_ros_bridge/include/: ros_sub_pub.hpp
planner/swarm_ros_bridge/launch/: gcs.rviz  gcs_bridge.launch  hitl_bridge.launch  onboard_bridge.launch  semi_gcs.launch  test.launch
planner/swarm_ros_bridge/scripts/: latency_listener.py  latency_talker.py  listener.py  talker.py
planner/swarm_ros_bridge/src/: .null-ls_103870_bridge_node.cpp  bridge_node.cpp
